# edu-durable-ai-tutorial-template

./: .gitignore  Makefile  README.md  activities.py  app.py  client.py  models.py  pyproject.toml  worker.py  workflow.py
.devcontainer/: devcontainer.json
completed_code/: worker.py
temporal/: __init__.py  activities.py  client.py  worker.py  workflow.py
temporal_code/: activities.py  starter.py  worker.py  workflow.py
