[project]
name = "temporal-test-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.78.5",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.4",
    "temporalio>=1.18.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.14.13",
]
